@@ -8,32 +8,38 @@ import java.util.Optional;
  * Contains all supported languages.
  */
 public enum Language {
-
-    BAHASA_INDONESIA("Bahasa Indonesia", "in"),
+    ARABIC("العربية (Arabic)", "ar"),
+    BAHASA_INDONESIA("Bahasa Indonesia", "id"),
     BRAZILIAN_PORTUGUESE("Brazilian Portuguese", "pt_BR"),
     DANISH("Dansk", "da"),
-    GERMAN("Deutsch", "de"),
+    DUTCH("Nederlands", "nl"),
     ENGLISH("English", "en"),
-    SPANISH("Español", "es"),
     FRENCH("Français", "fr"),
+    GERMAN("Deutsch", "de"),
+    GREEK("ελληνικά (Greek)", "el"),
     ITALIAN("Italiano", "it"),
     JAPANESE("Japanese", "ja"),
-    DUTCH("Nederlands", "nl"),
+    KOREAN("한국어 (Korean)", "ko"),
     NORWEGIAN("Norsk", "no"),
-    PERSIAN("Persian (فارسی)", "fa"),
+    PERSIAN("فارسی (Farsi)", "fa"),
+    POLISH("Polish", "pl"),
     PORTUGUESE("Português", "pt"),
     RUSSIAN("Russian", "ru"),
-    SIMPLIFIED_CHINESE("Simplified Chinese", "zh"),
-    SVENSKA("Svenska", "sv"),
-    TURKISH("Turkish", "tr"),
-    VIETNAMESE("Vietnamese", "vi"),
-    GREEK("ελληνικά", "el"),
+    SIMPLIFIED_CHINESE("Chinese (Simplified)", "zh_CN"),
+    SPANISH("Español", "es"),
+    SWEDISH("Svenska", "sv"),
     TAGALOG("Tagalog/Filipino", "tl"),
-    POLISH("Polish", "pl");
+    TRADITIONAL_CHINESE("Chinese (Traditional)", "zh_TW"),
+    TURKISH("Turkish", "tr"),
+    UKRAINIAN("украї́нська (Ukrainian)", "uk"),
+    VIETNAMESE("Vietnamese", "vi");
 
     private final String displayName;
     private final String id;
 
+    /**
+     * @param id Typically as 639-1 code
+     */
     Language(String displayName, String id) {
         this.displayName = displayName;
         this.id = id;
@@ -46,9 +52,9 @@ public enum Language {
         String[] languageParts = language.getId().split("_");
         Locale locale;
         if (languageParts.length == 1) {
-            locale = new Locale(languageParts[0]);
+            locale = Locale.of(languageParts[0]);
         } else if (languageParts.length == 2) {
-            locale = new Locale(languageParts[0], languageParts[1]);
+            locale = Locale.of(languageParts[0], languageParts[1]);
         } else {
             locale = Locale.ENGLISH;
         }
