@@ -3,7 +3,12 @@ package org.jabref.gui.autocompleter;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
+import java.util.Set;
 
+import javafx.collections.FXCollections;
+
+import org.jabref.logic.journals.JournalAbbreviationRepository;
 import org.jabref.model.database.BibDatabase;
 import org.jabref.model.entry.BibEntry;
 import org.jabref.model.entry.field.StandardField;
@@ -14,6 +19,8 @@ import org.junit.jupiter.api.Test;
 import static org.jabref.gui.autocompleter.AutoCompleterUtil.getRequest;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
 class FieldValueSuggestionProviderTest {
 
@@ -21,7 +28,7 @@ class FieldValueSuggestionProviderTest {
     private BibDatabase database;
 
     @BeforeEach
-    void setUp() throws Exception {
+    void setUp() {
         database = new BibDatabase();
         autoCompleter = new FieldValueSuggestionProvider(StandardField.TITLE, database);
     }
@@ -33,7 +40,7 @@ class FieldValueSuggestionProviderTest {
 
     @Test
     void completeWithoutAddingAnythingReturnsNothing() {
-        Collection<String> result = autoCompleter.provideSuggestions(getRequest(("test")));
+        Collection<String> result = autoCompleter.provideSuggestions(getRequest("test"));
         assertEquals(Collections.emptyList(), result);
     }
 
@@ -42,7 +49,7 @@ class FieldValueSuggestionProviderTest {
         BibEntry entry = new BibEntry();
         database.insertEntry(entry);
 
-        Collection<String> result = autoCompleter.provideSuggestions(getRequest(("test")));
+        Collection<String> result = autoCompleter.provideSuggestions(getRequest("test"));
         assertEquals(Collections.emptyList(), result);
     }
 
@@ -52,7 +59,24 @@ class FieldValueSuggestionProviderTest {
         entry.setField(StandardField.AUTHOR, "testAuthor");
         database.insertEntry(entry);
 
-        Collection<String> result = autoCompleter.provideSuggestions(getRequest(("test")));
+        Collection<String> result = autoCompleter.provideSuggestions(getRequest("test"));
+        assertEquals(Collections.emptyList(), result);
+    }
+
+    @Test
+    void completeOnIgnoredFieldReturnsNothing() {
+        AutoCompletePreferences autoCompletePreferences = mock(AutoCompletePreferences.class);
+        JournalAbbreviationRepository journalAbbreviationRepository = mock(JournalAbbreviationRepository.class);
+        when(autoCompletePreferences.getCompleteFields()).thenReturn(FXCollections.observableSet(Set.of(StandardField.AUTHOR)));
+        SuggestionProviders suggestionProviders = new SuggestionProviders(database, journalAbbreviationRepository, autoCompletePreferences);
+
+        SuggestionProvider<String> autoCompleter = (SuggestionProvider<String>) suggestionProviders.getForField(StandardField.TITLE);
+
+        BibEntry entry = new BibEntry();
+        entry.setField(StandardField.TITLE, "testValue");
+        database.insertEntry(entry);
+
+        Collection<String> result = autoCompleter.provideSuggestions(getRequest("testValue"));
         assertEquals(Collections.emptyList(), result);
     }
 
@@ -62,8 +86,8 @@ class FieldValueSuggestionProviderTest {
         entry.setField(StandardField.TITLE, "testValue");
         database.insertEntry(entry);
 
-        Collection<String> result = autoCompleter.provideSuggestions(getRequest(("testValue")));
-        assertEquals(Arrays.asList("testValue"), result);
+        Collection<String> result = autoCompleter.provideSuggestions(getRequest("testValue"));
+        assertEquals(List.of("testValue"), result);
     }
 
     @Test
@@ -72,8 +96,8 @@ class FieldValueSuggestionProviderTest {
         entry.setField(StandardField.TITLE, "testValue");
         database.insertEntry(entry);
 
-        Collection<String> result = autoCompleter.provideSuggestions(getRequest(("test")));
-        assertEquals(Arrays.asList("testValue"), result);
+        Collection<String> result = autoCompleter.provideSuggestions(getRequest("test"));
+        assertEquals(List.of("testValue"), result);
     }
 
     @Test
@@ -82,8 +106,8 @@ class FieldValueSuggestionProviderTest {
         entry.setField(StandardField.TITLE, "testValue");
         database.insertEntry(entry);
 
-        Collection<String> result = autoCompleter.provideSuggestions(getRequest(("testvalue")));
-        assertEquals(Arrays.asList("testValue"), result);
+        Collection<String> result = autoCompleter.provideSuggestions(getRequest("testvalue"));
+        assertEquals(List.of("testValue"), result);
     }
 
     @Test
@@ -101,7 +125,7 @@ class FieldValueSuggestionProviderTest {
         entry.setField(StandardField.TITLE, "testKey");
         database.insertEntry(entry);
 
-        Collection<String> result = autoCompleter.provideSuggestions(getRequest(("")));
+        Collection<String> result = autoCompleter.provideSuggestions(getRequest(""));
         assertEquals(Collections.emptyList(), result);
     }
 
@@ -114,7 +138,7 @@ class FieldValueSuggestionProviderTest {
         entryTwo.setField(StandardField.TITLE, "testValueTwo");
         database.insertEntry(entryTwo);
 
-        Collection<String> result = autoCompleter.provideSuggestions(getRequest(("testValue")));
+        Collection<String> result = autoCompleter.provideSuggestions(getRequest("testValue"));
         assertEquals(Arrays.asList("testValueOne", "testValueTwo"), result);
     }
 
@@ -124,7 +148,7 @@ class FieldValueSuggestionProviderTest {
         entry.setField(StandardField.TITLE, "val");
         database.insertEntry(entry);
 
-        Collection<String> result = autoCompleter.provideSuggestions(getRequest(("va")));
+        Collection<String> result = autoCompleter.provideSuggestions(getRequest("va"));
         assertEquals(Collections.singletonList("val"), result);
     }
 
@@ -134,7 +158,7 @@ class FieldValueSuggestionProviderTest {
         entry.setField(StandardField.TITLE, "test value");
         database.insertEntry(entry);
 
-        Collection<String> result = autoCompleter.provideSuggestions(getRequest(("val")));
+        Collection<String> result = autoCompleter.provideSuggestions(getRequest("val"));
         assertEquals(Collections.singletonList("test value"), result);
     }
 
@@ -144,7 +168,7 @@ class FieldValueSuggestionProviderTest {
         entry.setField(StandardField.TITLE, "test value");
         database.insertEntry(entry);
 
-        Collection<String> result = autoCompleter.provideSuggestions(getRequest(("lue")));
+        Collection<String> result = autoCompleter.provideSuggestions(getRequest("lue"));
         assertEquals(Collections.singletonList("test value"), result);
     }
 
@@ -154,7 +178,7 @@ class FieldValueSuggestionProviderTest {
         entry.setField(StandardField.TITLE, "test value");
         database.insertEntry(entry);
 
-        Collection<String> result = autoCompleter.provideSuggestions(getRequest(("te")));
+        Collection<String> result = autoCompleter.provideSuggestions(getRequest("te"));
         assertEquals(Collections.singletonList("test value"), result);
     }
 }
