@@ -2,6 +2,8 @@ package org.jabref.logic.importer.fileformat;
 
 import java.io.IOException;
 import java.io.StringReader;
+import java.net.InetAddress;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -10,17 +12,25 @@ import java.util.Iterator;
 import java.util.List;
 import java.util.Optional;
 
-import org.jabref.logic.exporter.SavePreferences;
+import javafx.collections.FXCollections;
+
+import org.jabref.logic.citationkeypattern.AbstractCitationKeyPattern;
+import org.jabref.logic.citationkeypattern.DatabaseCitationKeyPattern;
+import org.jabref.logic.citationkeypattern.GlobalCitationKeyPattern;
+import org.jabref.logic.cleanup.FieldFormatterCleanup;
+import org.jabref.logic.cleanup.FieldFormatterCleanups;
+import org.jabref.logic.exporter.SaveConfiguration;
+import org.jabref.logic.formatter.bibtexfields.EscapeAmpersandsFormatter;
+import org.jabref.logic.formatter.bibtexfields.EscapeDollarSignFormatter;
+import org.jabref.logic.formatter.bibtexfields.EscapeUnderscoresFormatter;
+import org.jabref.logic.formatter.bibtexfields.LatexCleanupFormatter;
+import org.jabref.logic.formatter.bibtexfields.NormalizeMonthFormatter;
+import org.jabref.logic.formatter.bibtexfields.NormalizePagesFormatter;
 import org.jabref.logic.formatter.casechanger.LowerCaseFormatter;
 import org.jabref.logic.importer.ImportFormatPreferences;
 import org.jabref.logic.importer.ParseException;
 import org.jabref.logic.importer.ParserResult;
 import org.jabref.logic.util.OS;
-import org.jabref.model.bibtexkeypattern.AbstractBibtexKeyPattern;
-import org.jabref.model.bibtexkeypattern.DatabaseBibtexKeyPattern;
-import org.jabref.model.bibtexkeypattern.GlobalBibtexKeyPattern;
-import org.jabref.model.cleanup.FieldFormatterCleanup;
-import org.jabref.model.cleanup.FieldFormatterCleanups;
 import org.jabref.model.database.BibDatabaseMode;
 import org.jabref.model.entry.BibEntry;
 import org.jabref.model.entry.BibEntryType;
@@ -28,6 +38,7 @@ import org.jabref.model.entry.BibtexString;
 import org.jabref.model.entry.Date;
 import org.jabref.model.entry.Month;
 import org.jabref.model.entry.field.BibField;
+import org.jabref.model.entry.field.Field;
 import org.jabref.model.entry.field.FieldPriority;
 import org.jabref.model.entry.field.InternalField;
 import org.jabref.model.entry.field.OrFields;
@@ -40,8 +51,9 @@ import org.jabref.model.groups.ExplicitGroup;
 import org.jabref.model.groups.GroupHierarchyType;
 import org.jabref.model.groups.GroupTreeNode;
 import org.jabref.model.groups.RegexKeywordGroup;
+import org.jabref.model.groups.TexGroup;
 import org.jabref.model.groups.WordKeywordGroup;
-import org.jabref.model.metadata.SaveOrderConfig;
+import org.jabref.model.metadata.SaveOrder;
 import org.jabref.model.util.DummyFileUpdateMonitor;
 import org.jabref.model.util.FileUpdateMonitor;
 
@@ -67,7 +79,7 @@ class BibtexParserTest {
     @BeforeEach
     void setUp() {
         importFormatPreferences = mock(ImportFormatPreferences.class, Answers.RETURNS_DEEP_STUBS);
-        when(importFormatPreferences.getKeywordSeparator()).thenReturn(',');
+        when(importFormatPreferences.bibEntryPreferences().getKeywordSeparator()).thenReturn(',');
         parser = new BibtexParser(importFormatPreferences, new DummyFileUpdateMonitor());
     }
 
@@ -85,10 +97,10 @@ class BibtexParserTest {
 
         BibEntry expected = new BibEntry();
         expected.setType(StandardEntryType.Article);
-        expected.setCiteKey("test");
+        expected.setCitationKey("test");
         expected.setField(StandardField.AUTHOR, "Ed von Test");
 
-        assertEquals(Collections.singletonList(expected), parsed);
+        assertEquals(List.of(expected), parsed);
     }
 
     @Test
@@ -111,12 +123,15 @@ class BibtexParserTest {
     @Test
     void singleFromStringRecognizesEntry() throws ParseException {
         Optional<BibEntry> parsed = BibtexParser.singleFromString(
-                "@article{canh05," + "  author = {Crowston, K. and Annabi, H.},\n" + "  title = {Title A}}\n",
+                """
+                        @article{canh05,  author = {Crowston, K. and Annabi, H.},
+                          title = {Title A}}
+                        """,
                 importFormatPreferences, fileMonitor);
 
         BibEntry expected = new BibEntry();
         expected.setType(StandardEntryType.Article);
-        expected.setCiteKey("canh05");
+        expected.setCitationKey("canh05");
         expected.setField(StandardField.AUTHOR, "Crowston, K. and Annabi, H.");
         expected.setField(StandardField.TITLE, "Title A");
 
@@ -125,13 +140,14 @@ class BibtexParserTest {
 
     @Test
     void singleFromStringRecognizesEntryInMultiple() throws ParseException {
-        Optional<BibEntry> parsed = BibtexParser.singleFromString(
-                "@article{canh05," + "  author = {Crowston, K. and Annabi, H.},\n" + "  title = {Title A}}\n"
-                        + "@inProceedings{foo," + "  author={Norton Bar}}",
+        Optional<BibEntry> parsed = BibtexParser.singleFromString("""
+                        @article{canh05, author = {Crowston, K. and Annabi, H.},
+                            title = {Title A}}
+                        @inProceedings{foo,  author={Norton Bar}}""",
                 importFormatPreferences, fileMonitor);
 
-        assertTrue(parsed.get().getCiteKeyOptional().equals(Optional.of("canh05"))
-                || parsed.get().getCiteKeyOptional().equals(Optional.of("foo")));
+        assertTrue(parsed.get().getCitationKey().equals(Optional.of("canh05"))
+                || parsed.get().getCitationKey().equals(Optional.of("foo")));
     }
 
     @Test
@@ -158,7 +174,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("Ed von Test"), entry.getField(StandardField.AUTHOR));
     }
@@ -173,7 +189,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("Ed von Test"), entry.getField(StandardField.AUTHOR));
     }
@@ -187,7 +203,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
     }
 
     @Test
@@ -200,7 +216,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("Ed von Test"), entry.getField(StandardField.AUTHOR));
     }
@@ -215,7 +231,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("Ed von Test"), entry.getField(StandardField.AUTHOR));
     }
@@ -230,7 +246,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("Ed von Test"), entry.getField(StandardField.AUTHOR));
     }
@@ -245,7 +261,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(new UnknownEntryType("unknown"), entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("Ed von Test"), entry.getField(StandardField.AUTHOR));
     }
@@ -260,7 +276,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(new UnknownEntryType("thisisalongstringtotestmaybeitistolongwhoknowsnotme"), entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("Ed von Test"), entry.getField(StandardField.AUTHOR));
     }
@@ -275,28 +291,31 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("Ed von Test"), entry.getField(StandardField.AUTHOR));
     }
 
     @Test
     void parseRecognizesEntryWithBigNumbers() throws IOException {
-        ParserResult result = parser.parse(new StringReader("@article{canh05," + "isbn = 1234567890123456789,\n"
-                + "isbn2 = {1234567890123456789},\n" + "small = 1234,\n" + "}"));
+        ParserResult result = parser.parse(new StringReader("""
+                @article{canh05,isbn = 1234567890123456789,
+                isbn2 = {1234567890123456789},
+                small = 1234,
+                }"""));
 
         Collection<BibEntry> parsed = result.getDatabase().getEntries();
         BibEntry entry = parsed.iterator().next();
 
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("canh05"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("canh05"), entry.getCitationKey());
         assertEquals(Optional.of("1234567890123456789"), entry.getField(StandardField.ISBN));
         assertEquals(Optional.of("1234567890123456789"), entry.getField(new UnknownField("isbn2")));
         assertEquals(Optional.of("1234"), entry.getField(new UnknownField("small")));
     }
 
     @Test
-    void parseRecognizesBibtexKeyWithSpecialCharacters() throws IOException {
+    void parseRecognizesCitationKeyWithSpecialCharacters() throws IOException {
         ParserResult result = parser
                 .parse(new StringReader("@article{te_st:with-special(characters),author={Ed von Test}}"));
 
@@ -304,7 +323,7 @@ class BibtexParserTest {
         BibEntry entry = parsed.iterator().next();
 
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("te_st:with-special(characters)"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("te_st:with-special(characters)"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("Ed von Test"), entry.getField(StandardField.AUTHOR));
     }
@@ -319,7 +338,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("Ed von Test"), entry.getField(StandardField.AUTHOR));
     }
@@ -334,14 +353,14 @@ class BibtexParserTest {
         BibEntry expected = new BibEntry(StandardEntryType.Article).withField(InternalField.KEY_FIELD, "test")
                                                                    .withField(StandardField.AUTHOR, "Ed von T@st");
 
-        assertEquals(Collections.singletonList(expected), parsed);
+        assertEquals(List.of(expected), parsed);
     }
 
     @Test
     void parseRecognizesEntryPrecedingComment() throws IOException {
         String comment = "@Comment{@article{myarticle,}" + OS.NEWLINE
-                + "@inproceedings{blabla, title={the proceedings of bl@bl@}; }" + OS.NEWLINE + "}";
-        String entryWithComment = comment + OS.NEWLINE + "@article{test,author={Ed von T@st}}";
+                + "@inproceedings{blabla, title={the proceedings of bl@bl@}; }" + OS.NEWLINE + "}" + OS.NEWLINE;
+        String entryWithComment = comment + "@article{test,author={Ed von T@st}}";
         BibEntry expected = new BibEntry(StandardEntryType.Article)
                 .withField(InternalField.KEY_FIELD, "test")
                 .withField(StandardField.AUTHOR, "Ed von T@st");
@@ -350,7 +369,7 @@ class BibtexParserTest {
         ParserResult result = parser.parse(new StringReader(entryWithComment));
         List<BibEntry> parsed = result.getDatabase().getEntries();
 
-        assertEquals(Collections.singletonList(expected), parsed);
+        assertEquals(List.of(expected), parsed);
         assertEquals(expected.getUserComments(), parsed.get(0).getUserComments());
     }
 
@@ -359,20 +378,22 @@ class BibtexParserTest {
         List<BibEntry> expected = new ArrayList<>();
         BibEntry firstEntry = new BibEntry();
         firstEntry.setType(StandardEntryType.Article);
-        firstEntry.setCiteKey("canh05");
+        firstEntry.setCitationKey("canh05");
         firstEntry.setField(StandardField.AUTHOR, "Crowston, K. and Annabi, H.");
         firstEntry.setField(StandardField.TITLE, "Title A");
         expected.add(firstEntry);
 
         BibEntry secondEntry = new BibEntry();
         secondEntry.setType(StandardEntryType.InProceedings);
-        secondEntry.setCiteKey("foo");
+        secondEntry.setCitationKey("foo");
         secondEntry.setField(StandardField.AUTHOR, "Norton Bar");
         expected.add(secondEntry);
 
         ParserResult result = parser.parse(
-                new StringReader("@article{canh05," + "  author = {Crowston, K. and Annabi, H.},\n"
-                        + "  title = {Title A}}\n" + "@inProceedings{foo," + "  author={Norton Bar}}"));
+                new StringReader("""
+                        @article{canh05,  author = {Crowston, K. and Annabi, H.},
+                          title = {Title A}}
+                        @inProceedings{foo,  author={Norton Bar}}"""));
         List<BibEntry> parsed = result.getDatabase().getEntries();
 
         assertEquals(expected, parsed);
@@ -388,7 +409,7 @@ class BibtexParserTest {
                 .parse(new StringReader(firstEntry + secondEntry));
 
         for (BibEntry entry : result.getDatabase().getEntries()) {
-            if (entry.getCiteKeyOptional().equals(Optional.of("canh05"))) {
+            if (entry.getCitationKey().equals(Optional.of("canh05"))) {
                 assertEquals(firstEntry, entry.getParsedSerialization());
             } else {
                 assertEquals(secondEntry, entry.getParsedSerialization());
@@ -401,12 +422,12 @@ class BibtexParserTest {
         List<BibEntry> expected = new ArrayList<>();
         BibEntry firstEntry = new BibEntry();
         firstEntry.setType(StandardEntryType.Article);
-        firstEntry.setCiteKey("canh05");
+        firstEntry.setCitationKey("canh05");
         expected.add(firstEntry);
 
         BibEntry secondEntry = new BibEntry();
         secondEntry.setType(StandardEntryType.InProceedings);
-        secondEntry.setCiteKey("foo");
+        secondEntry.setCitationKey("foo");
         expected.add(secondEntry);
 
         ParserResult result = parser
@@ -426,7 +447,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("Ed von Test and Second Author and Third Author"), entry.getField(StandardField.AUTHOR));
     }
@@ -441,7 +462,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("Ed von Test and Second Author and Third Author"), entry.getField(StandardField.EDITOR));
     }
@@ -456,20 +477,26 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("Test, Second Keyword, Third Keyword"), entry.getField(StandardField.KEYWORDS));
     }
 
     @Test
     void parseRecognizesHeaderButIgnoresEncoding() throws IOException {
-        ParserResult result = parser.parse(new StringReader("This file was created with JabRef 2.1 beta 2." + "\n"
-                + "Encoding: Cp1252" + "\n" + "" + "\n" + "@INPROCEEDINGS{CroAnnHow05," + "\n"
-                + "  author = {Crowston, K. and Annabi, H. and Howison, J. and Masango, C.}," + "\n"
-                + "  title = {Effective work practices for floss development: A model and propositions}," + "\n"
-                + "  booktitle = {Hawaii International Conference On System Sciences (HICSS)}," + "\n"
-                + "  year = {2005}," + "\n" + "  owner = {oezbek}," + "\n" + "  timestamp = {2006.05.29}," + "\n"
-                + "  url = {http://james.howison.name/publications.html}" + "\n" + "}))"));
+        ParserResult result = parser.parse(new StringReader("""
+                This file was created with JabRef 2.1 beta 2.
+                Encoding: Cp1252
+
+                @INPROCEEDINGS{CroAnnHow05,
+                  author = {Crowston, K. and Annabi, H. and Howison, J. and Masango, C.},
+                  title = {Effective work practices for floss development: A model and propositions},
+                  booktitle = {Hawaii International Conference On System Sciences (HICSS)},
+                  year = {2005},
+                  owner = {oezbek},
+                  timestamp = {2006.05.29},
+                  url = {http://james.howison.name/publications.html}
+                }))"""));
 
         Collection<BibEntry> parsed = result.getDatabase().getEntries();
         BibEntry entry = parsed.iterator().next();
@@ -478,7 +505,7 @@ class BibtexParserTest {
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.InProceedings, entry.getType());
         assertEquals(8, entry.getFields().size());
-        assertEquals(Optional.of("CroAnnHow05"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("CroAnnHow05"), entry.getCitationKey());
         assertEquals(Optional.of("Crowston, K. and Annabi, H. and Howison, J. and Masango, C."), entry.getField(StandardField.AUTHOR));
         assertEquals(Optional.of("Effective work practices for floss development: A model and propositions"),
                 entry.getField(StandardField.TITLE));
@@ -493,12 +520,16 @@ class BibtexParserTest {
     @Test
     void parseRecognizesFormatedEntry() throws IOException {
         ParserResult result = parser.parse(
-                new StringReader("" + "@INPROCEEDINGS{CroAnnHow05," + "\n"
-                        + "  author = {Crowston, K. and Annabi, H. and Howison, J. and Masango, C.}," + "\n"
-                        + "  title = {Effective work practices for floss development: A model and propositions}," + "\n"
-                        + "  booktitle = {Hawaii International Conference On System Sciences (HICSS)}," + "\n"
-                        + "  year = {2005}," + "\n" + "  owner = {oezbek}," + "\n" + "  timestamp = {2006.05.29},"
-                        + "\n" + "  url = {http://james.howison.name/publications.html}" + "\n" + "}))"));
+                new StringReader("""
+                        @INPROCEEDINGS{CroAnnHow05,
+                          author = {Crowston, K. and Annabi, H. and Howison, J. and Masango, C.},
+                          title = {Effective work practices for floss development: A model and propositions},
+                          booktitle = {Hawaii International Conference On System Sciences (HICSS)},
+                          year = {2005},
+                          owner = {oezbek},
+                          timestamp = {2006.05.29},
+                          url = {http://james.howison.name/publications.html}
+                        }))"""));
 
         Collection<BibEntry> parsed = result.getDatabase().getEntries();
         BibEntry entry = parsed.iterator().next();
@@ -506,7 +537,7 @@ class BibtexParserTest {
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.InProceedings, entry.getType());
         assertEquals(8, entry.getFields().size());
-        assertEquals(Optional.of("CroAnnHow05"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("CroAnnHow05"), entry.getCitationKey());
         assertEquals(Optional.of("Crowston, K. and Annabi, H. and Howison, J. and Masango, C."), entry.getField(StandardField.AUTHOR));
         assertEquals(Optional.of("Effective work practices for floss development: A model and propositions"),
                 entry.getField(StandardField.TITLE));
@@ -528,7 +559,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("Ed von Test"), entry.getField(StandardField.AUTHOR));
     }
@@ -543,7 +574,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("2005"), entry.getField(StandardField.YEAR));
     }
@@ -558,7 +589,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("Ed von Test"), entry.getField(StandardField.AUTHOR));
     }
@@ -573,9 +604,35 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("D:\\Documents\\literature\\Tansel-PRL2006.pdf"), entry.getField(StandardField.FILE));
+    }
+
+    @Test
+    void parseRecognizesFinalSlashAsSlash() throws Exception {
+        ParserResult result = parser
+                .parse(new StringReader("""
+        @misc{,
+          test = {wired\\},
+        }
+        """));
+
+        assertEquals(
+                List.of(new BibEntry()
+                .withField(new UnknownField("test"), "wired\\")),
+                result.getDatabase().getEntries()
+        );
+    }
+
+    /**
+     * JabRef's heuristics is not able to parse this special case.
+     */
+    @Test
+    void parseFailsWithFinalSlashAsSlashWhenSingleLine() throws Exception {
+        ParserResult parserResult = parser.parse(new StringReader("@misc{, test = {wired\\}}"));
+        // In case JabRef was more relaxed, `assertFalse` would be provided here.
+        assertTrue(parserResult.hasWarnings());
     }
 
     @Test
@@ -588,7 +645,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("1-4~#nov#"), entry.getField(StandardField.DATE));
     }
@@ -596,11 +653,15 @@ class BibtexParserTest {
     @Test
     void parseReturnsEmptyListIfNoEntryRecognized() throws IOException {
         ParserResult result = parser.parse(
-                new StringReader("  author = {Crowston, K. and Annabi, H. and Howison, J. and Masango, C.}," + "\n"
-                        + "  title = {Effective work practices for floss development: A model and propositions}," + "\n"
-                        + "  booktitle = {Hawaii International Conference On System Sciences (HICSS)}," + "\n"
-                        + "  year = {2005}," + "\n" + "  owner = {oezbek}," + "\n" + "  timestamp = {2006.05.29},"
-                        + "\n" + "  url = {http://james.howison.name/publications.html}" + "\n" + "}))"));
+                new StringReader("""
+                          author = {Crowston, K. and Annabi, H. and Howison, J. and Masango, C.},
+                          title = {Effective work practices for floss development: A model and propositions},
+                          booktitle = {Hawaii International Conference On System Sciences (HICSS)},
+                          year = {2005},
+                          owner = {oezbek},
+                          timestamp = {2006.05.29},
+                          url = {http://james.howison.name/publications.html}
+                        }))"""));
 
         Collection<BibEntry> parsed = result.getDatabase().getEntries();
 
@@ -610,7 +671,10 @@ class BibtexParserTest {
     @Test
     void parseReturnsEmptyListIfNoEntryExistent() throws IOException {
         ParserResult result = parser
-                .parse(new StringReader("This was created with JabRef 2.1 beta 2." + "\n" + "Encoding: Cp1252" + "\n"));
+                .parse(new StringReader("""
+                        This was created with JabRef 2.1 beta 2.
+                        Encoding: Cp1252
+                        """));
 
         Collection<BibEntry> parsed = result.getDatabase().getEntries();
 
@@ -618,7 +682,7 @@ class BibtexParserTest {
     }
 
     @Test
-    void parseNotWarnsAboutEntryWithoutBibtexKey() throws IOException {
+    void parseNotWarnsAboutEntryWithoutCitationKey() throws IOException {
         BibEntry expected = new BibEntry();
         expected.setField(StandardField.AUTHOR, "Ed von Test");
         expected.setType(StandardEntryType.Article);
@@ -628,7 +692,7 @@ class BibtexParserTest {
         Collection<BibEntry> parsed = result.getDatabase().getEntries();
 
         assertFalse(result.hasWarnings());
-        assertEquals(Collections.singletonList(expected), parsed);
+        assertEquals(List.of(expected), parsed);
     }
 
     @Test
@@ -652,7 +716,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(Optional.of("escaped \\{ bracket"), entry.getField(StandardField.REVIEW));
         assertFalse(result.hasWarnings());
     }
@@ -667,7 +731,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(Optional.of("escaped \\} bracket"), entry.getField(StandardField.REVIEW));
         assertFalse(result.hasWarnings());
     }
@@ -734,7 +798,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("author @ good"), entry.getField(StandardField.AUTHOR));
     }
@@ -749,7 +813,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("Test {Ed {von} Test}"), entry.getField(StandardField.AUTHOR));
     }
@@ -765,7 +829,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("Test {\" Test}"), entry.getField(StandardField.AUTHOR));
     }
@@ -792,7 +856,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(2, entry.getFields().size());
         assertEquals(Optional.of("Ed von Test"), entry.getField(StandardField.AUTHOR));
         assertTrue(result.hasWarnings());
@@ -808,7 +872,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsed.size());
         assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(3, entry.getFields().size());
         assertEquals(Optional.of("Ed von Test"), entry.getField(StandardField.AUTHOR));
         assertEquals(Optional.of("8,"), entry.getField(StandardField.MONTH));
@@ -911,7 +975,7 @@ class BibtexParserTest {
         BibtexString first = iterator.next();
         BibtexString second = iterator.next();
         // Sort them because we can't be sure about the order
-        if (first.getName().equals("adieu")) {
+        if ("adieu".equals(first.getName())) {
             BibtexString tmp = first;
             first = second;
             second = tmp;
@@ -941,7 +1005,7 @@ class BibtexParserTest {
         assertEquals("Bourdieu, Pierre", parsedString.getContent());
         assertEquals(1, parsedEntries.size());
         assertEquals(StandardEntryType.Book, parsedEntry.getType());
-        assertEquals(Optional.of("bourdieu-2002-questions-sociologie"), parsedEntry.getCiteKeyOptional());
+        assertEquals(Optional.of("bourdieu-2002-questions-sociologie"), parsedEntry.getCitationKey());
         assertEquals(Optional.of("Paris"), parsedEntry.getField(StandardField.ADDRESS));
         assertEquals(Optional.of("#bourdieu#"), parsedEntry.getField(StandardField.AUTHOR));
         assertEquals(Optional.of("2707318256"), parsedEntry.getField(StandardField.ISBN));
@@ -985,7 +1049,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsedEntries.size());
         assertEquals(StandardEntryType.Article, parsedEntry.getType());
-        assertEquals(Optional.of("test"), parsedEntry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), parsedEntry.getCitationKey());
         assertEquals(2, parsedEntry.getFields().size());
         assertEquals(Optional.of("Ed von Test"), parsedEntry.getField(StandardField.AUTHOR));
     }
@@ -1000,7 +1064,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsedEntries.size());
         assertEquals(StandardEntryType.Article, parsedEntry.getType());
-        assertEquals(Optional.of("test"), parsedEntry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), parsedEntry.getCitationKey());
         assertEquals(2, parsedEntry.getFields().size());
         assertEquals(Optional.of("Ed von Test"), parsedEntry.getField(StandardField.AUTHOR));
     }
@@ -1023,7 +1087,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsedEntries.size());
         assertEquals(StandardEntryType.Article, parsedEntry.getType());
-        assertEquals(Optional.of("test"), parsedEntry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), parsedEntry.getCitationKey());
         assertEquals(2, parsedEntry.getFields().size());
         assertEquals(Optional.of("Ed von Test"), parsedEntry.getField(StandardField.AUTHOR));
     }
@@ -1038,7 +1102,7 @@ class BibtexParserTest {
 
         assertEquals(1, parsedEntries.size());
         assertEquals(StandardEntryType.Article, parsedEntry.getType());
-        assertEquals(Optional.of("test"), parsedEntry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), parsedEntry.getCitationKey());
         assertEquals(2, parsedEntry.getFields().size());
         assertEquals(Optional.of("Ed von Test"), parsedEntry.getField(StandardField.AUTHOR));
     }
@@ -1093,8 +1157,8 @@ class BibtexParserTest {
 
     @Test
     void parsePreservesMultipleSpacesInNonWrappableField() throws IOException {
-        when(importFormatPreferences.getFieldContentFormatterPreferences().getNonWrappableFields())
-                .thenReturn(Collections.singletonList(StandardField.FILE));
+        when(importFormatPreferences.fieldPreferences().getNonWrappableFields()).thenReturn(
+                FXCollections.observableArrayList(List.of(StandardField.FILE)));
         BibtexParser parser = new BibtexParser(importFormatPreferences, fileMonitor);
         ParserResult result = parser
                 .parse(new StringReader("@article{canh05,file = {ups  sala}}"));
@@ -1122,7 +1186,7 @@ class BibtexParserTest {
         Collection<BibEntry> parsedEntries = result.getDatabase().getEntries();
         BibEntry parsedEntry = parsedEntries.iterator().next();
 
-        assertEquals(Optional.of("ups " + OS.NEWLINE + "sala"), parsedEntry.getField(StandardField.ABSTRACT));
+        assertEquals(Optional.of("ups \nsala"), parsedEntry.getField(StandardField.ABSTRACT));
     }
 
     @Test
@@ -1136,12 +1200,12 @@ class BibtexParserTest {
         assertFalse(result.hasWarnings());
         assertEquals(1, parsedEntries.size());
         assertEquals(StandardEntryType.Article, parsedEntry.getType());
-        assertEquals(Optional.of("test"), parsedEntry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), parsedEntry.getCitationKey());
         assertEquals(Optional.of("H'{e}lne Fiaux"), parsedEntry.getField(StandardField.AUTHOR));
     }
 
     /**
-     * Test for #669
+     * Test for <a href="https://github.com/JabRef/jabref/issues/669">#669</a>
      */
     @Test
     void parsePreambleAndEntryWithoutNewLine() throws IOException {
@@ -1155,7 +1219,7 @@ class BibtexParserTest {
         assertEquals(Optional.of("some text and \\latex"), result.getDatabase().getPreamble());
         assertEquals(1, parsedEntries.size());
         assertEquals(StandardEntryType.Article, parsedEntry.getType());
-        assertEquals(Optional.of("test"), parsedEntry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), parsedEntry.getCitationKey());
         assertEquals(Optional.of("H'{e}lne Fiaux"), parsedEntry.getField(StandardField.AUTHOR));
     }
 
@@ -1194,7 +1258,7 @@ class BibtexParserTest {
     }
 
     @Test
-    void parseSavesNewlinesBeforeEntryInParsedSerialization() throws IOException {
+    void parseSavesAllButOneNewlinesBeforeEntryInParsedSerialization() throws IOException {
         String testEntry = "@article{test,author={Ed von Test}}";
         ParserResult result = parser
                 .parse(new StringReader(OS.NEWLINE + OS.NEWLINE + OS.NEWLINE + testEntry));
@@ -1203,20 +1267,23 @@ class BibtexParserTest {
         BibEntry parsedEntry = parsedEntries.iterator().next();
 
         assertEquals(1, parsedEntries.size());
-        assertEquals(OS.NEWLINE + OS.NEWLINE + OS.NEWLINE + testEntry, parsedEntry.getParsedSerialization());
+        // The first newline is removed, because JabRef interprets that always as block separator
+        assertEquals(OS.NEWLINE + OS.NEWLINE + testEntry, parsedEntry.getParsedSerialization());
     }
 
     @Test
-    void parseRemovesEncodingLineInParsedSerialization() throws IOException {
+    void parseRemovesEncodingLineAndSeparatorInParsedSerialization() throws IOException {
         String testEntry = "@article{test,author={Ed von Test}}";
         ParserResult result = parser.parse(
-                new StringReader(SavePreferences.ENCODING_PREFIX + OS.NEWLINE + OS.NEWLINE + OS.NEWLINE + testEntry));
+                new StringReader(SaveConfiguration.ENCODING_PREFIX + OS.NEWLINE + OS.NEWLINE + OS.NEWLINE + testEntry));
 
         Collection<BibEntry> parsedEntries = result.getDatabase().getEntries();
         BibEntry parsedEntry = parsedEntries.iterator().next();
 
         assertEquals(1, parsedEntries.size());
-        assertEquals(OS.NEWLINE + OS.NEWLINE + testEntry, parsedEntry.getParsedSerialization());
+        // First two newlines are removed because of removal of "Encoding"
+        // Third newline removed because of block functionality
+        assertEquals(testEntry, parsedEntry.getParsedSerialization());
     }
 
     @Test
@@ -1231,7 +1298,7 @@ class BibtexParserTest {
         BibEntry first = iterator.next();
         BibEntry second = iterator.next();
         // Sort them because we can't be sure about the order
-        if (first.getCiteKeyOptional().equals(Optional.of("test2"))) {
+        if (first.getCitationKey().equals(Optional.of("test2"))) {
             BibEntry tmp = first;
             first = second;
             second = tmp;
@@ -1239,7 +1306,8 @@ class BibtexParserTest {
 
         assertEquals(2, parsedEntries.size());
         assertEquals(testEntryOne + OS.NEWLINE, first.getParsedSerialization());
-        assertEquals(OS.NEWLINE + OS.NEWLINE + testEntryTwo, second.getParsedSerialization());
+        // one newline is removed, because it is written by JabRef's block functionality
+        assertEquals(OS.NEWLINE + testEntryTwo, second.getParsedSerialization());
     }
 
     @Test
@@ -1280,20 +1348,93 @@ class BibtexParserTest {
     @Test
     void parseRecognizesSaveActionsAfterEntry() throws IOException {
         ParserResult parserResult = parser.parse(
+                new StringReader("""
+                        @InProceedings{6055279,
+                          Title                    = {Educational session 1},
+                          Booktitle                = {Custom Integrated Circuits Conference (CICC), 2011 IEEE},
+                          Year                     = {2011},
+                          Month                    = {Sept},
+                          Pages                    = {1-7},
+                          Abstract                 = {Start of the above-titled section of the conference proceedings record.},
+                          DOI                      = {10.1109/CICC.2011.6055279},
+                          ISSN                     = {0886-5930}
+                        }
+
+                        @comment{jabref-meta: saveActions:enabled;title[lower_case]}"""));
+
+        FieldFormatterCleanups saveActions = parserResult.getMetaData().getSaveActions().get();
+
+        assertTrue(saveActions.isEnabled());
+        assertEquals(List.of(new FieldFormatterCleanup(StandardField.TITLE, new LowerCaseFormatter())),
+                saveActions.getConfiguredActions());
+    }
+
+    @Test
+    void parserKeepsSaveActions() throws IOException {
+        ParserResult parserResult = parser.parse(
+                new StringReader("""
+                        @InProceedings{6055279,
+                          Title                    = {Educational session 1},
+                          Booktitle                = {Custom Integrated Circuits Conference (CICC), 2011 IEEE},
+                          Year                     = {2011},
+                          Month                    = {Sept},
+                          Pages                    = {1-7},
+                          Abstract                 = {Start of the above-titled section of the conference proceedings record.},
+                          DOI                      = {10.1109/CICC.2011.6055279},
+                          ISSN                     = {0886-5930}
+                        }
+
+                        @Comment{jabref-meta: saveActions:enabled;
+                        month[normalize_month]
+                        pages[normalize_page_numbers]
+                        title[escapeAmpersands,escapeDollarSign,escapeUnderscores,latex_cleanup]
+                        booktitle[escapeAmpersands,escapeDollarSign,escapeUnderscores,latex_cleanup]
+                        publisher[escapeAmpersands,escapeDollarSign,escapeUnderscores,latex_cleanup]
+                        journal[escapeAmpersands,escapeDollarSign,escapeUnderscores,latex_cleanup]
+                        abstract[escapeAmpersands,escapeDollarSign,escapeUnderscores,latex_cleanup]
+                        ;}
+                        """));
+
+        FieldFormatterCleanups saveActions = parserResult.getMetaData().getSaveActions().get();
+
+        assertTrue(saveActions.isEnabled());
+
+        List<FieldFormatterCleanup> expected = new ArrayList<>(30);
+        expected.add(new FieldFormatterCleanup(StandardField.MONTH, new NormalizeMonthFormatter()));
+        expected.add(new FieldFormatterCleanup(StandardField.PAGES, new NormalizePagesFormatter()));
+        for (Field field : List.of(StandardField.TITLE, StandardField.BOOKTITLE, StandardField.PUBLISHER, StandardField.JOURNAL, StandardField.ABSTRACT)) {
+            expected.add(new FieldFormatterCleanup(field, new EscapeAmpersandsFormatter()));
+            expected.add(new FieldFormatterCleanup(field, new EscapeDollarSignFormatter()));
+            expected.add(new FieldFormatterCleanup(field, new EscapeUnderscoresFormatter()));
+            expected.add(new FieldFormatterCleanup(field, new LatexCleanupFormatter()));
+        }
+        assertEquals(expected, saveActions.getConfiguredActions());
+    }
+
+    @Test
+    void parseRecognizesCRLFLineBreak() throws IOException {
+        ParserResult result = parser.parse(
+                new StringReader("@InProceedings{6055279,\r\n" + "  Title                    = {Educational session 1},\r\n"
+                        + "  Booktitle                = {Custom Integrated Circuits Conference (CICC), 2011 IEEE},\r\n"
+                        + "  Year                     = {2011},\r\n" + "  Month                    = {Sept},\r\n"
+                        + "  Pages                    = {1-7},\r\n"
+                        + "  Abstract                 = {Start of the above-titled section of the conference proceedings record.},\r\n"
+                        + "  DOI                      = {10.1109/CICC.2011.6055279},\r\n"
+                        + "  ISSN                     = {0886-5930}\r\n" + "}\r\n"));
+        assertEquals("\r\n", result.getDatabase().getNewLineSeparator());
+    }
+
+    @Test
+    void parseRecognizesLFLineBreak() throws IOException {
+        ParserResult result = parser.parse(
                 new StringReader("@InProceedings{6055279,\n" + "  Title                    = {Educational session 1},\n"
                         + "  Booktitle                = {Custom Integrated Circuits Conference (CICC), 2011 IEEE},\n"
                         + "  Year                     = {2011},\n" + "  Month                    = {Sept},\n"
                         + "  Pages                    = {1-7},\n"
                         + "  Abstract                 = {Start of the above-titled section of the conference proceedings record.},\n"
                         + "  DOI                      = {10.1109/CICC.2011.6055279},\n"
-                        + "  ISSN                     = {0886-5930}\n" + "}\n" + "\n"
-                        + "@comment{jabref-meta: saveActions:enabled;title[lower_case]}"));
-
-        FieldFormatterCleanups saveActions = parserResult.getMetaData().getSaveActions().get();
-
-        assertTrue(saveActions.isEnabled());
-        assertEquals(Collections.singletonList(new FieldFormatterCleanup(StandardField.TITLE, new LowerCaseFormatter())),
-                saveActions.getConfiguredActions());
+                        + "  ISSN                     = {0886-5930}\n" + "}\n"));
+        assertEquals("\n", result.getDatabase().getNewLineSeparator());
     }
 
     @Test
@@ -1304,7 +1445,7 @@ class BibtexParserTest {
         FieldFormatterCleanups saveActions = parserResult.getMetaData().getSaveActions().get();
 
         assertTrue(saveActions.isEnabled());
-        assertEquals(Collections.singletonList(new FieldFormatterCleanup(StandardField.TITLE, new LowerCaseFormatter())),
+        assertEquals(List.of(new FieldFormatterCleanup(StandardField.TITLE, new LowerCaseFormatter())),
                 saveActions.getConfiguredActions());
     }
 
@@ -1334,10 +1475,12 @@ class BibtexParserTest {
                 new StringReader(
                         "@Comment{jabref-meta: saveOrderConfig:specified;author;false;year;true;abstract;false;}"));
 
-        Optional<SaveOrderConfig> saveOrderConfig = result.getMetaData().getSaveOrderConfig();
+        Optional<SaveOrder> saveOrderConfig = result.getMetaData().getSaveOrderConfig();
 
-        assertEquals(new SaveOrderConfig(false, true, new SaveOrderConfig.SortCriterion(StandardField.AUTHOR, false),
-                        new SaveOrderConfig.SortCriterion(StandardField.YEAR, true), new SaveOrderConfig.SortCriterion(StandardField.ABSTRACT, false)),
+        assertEquals(new SaveOrder(SaveOrder.OrderType.SPECIFIED, List.of(
+                new SaveOrder.SortCriterion(StandardField.AUTHOR, false),
+                new SaveOrder.SortCriterion(StandardField.YEAR, true),
+                new SaveOrder.SortCriterion(StandardField.ABSTRACT, false))),
                 saveOrderConfig.get());
     }
 
@@ -1347,11 +1490,11 @@ class BibtexParserTest {
                 .parse(new StringReader("@comment{jabref-meta: keypattern_article:articleTest;}" + OS.NEWLINE
                         + "@comment{jabref-meta: keypatterndefault:test;}"));
 
-        GlobalBibtexKeyPattern pattern = mock(GlobalBibtexKeyPattern.class);
-        AbstractBibtexKeyPattern bibtexKeyPattern = result.getMetaData().getCiteKeyPattern(pattern);
-        AbstractBibtexKeyPattern expectedPattern = new DatabaseBibtexKeyPattern(pattern);
+        GlobalCitationKeyPattern pattern = mock(GlobalCitationKeyPattern.class);
+        AbstractCitationKeyPattern bibtexKeyPattern = result.getMetaData().getCiteKeyPattern(pattern);
+        AbstractCitationKeyPattern expectedPattern = new DatabaseCitationKeyPattern(pattern);
         expectedPattern.setDefaultValue("test");
-        expectedPattern.addBibtexKeyPattern(StandardEntryType.Article, "articleTest");
+        expectedPattern.addCitationKeyPattern(StandardEntryType.Article, "articleTest");
 
         assertEquals(expectedPattern, bibtexKeyPattern);
     }
@@ -1368,11 +1511,13 @@ class BibtexParserTest {
 
     @Test
     void integrationTestGroupTree() throws IOException, ParseException {
-        ParserResult result = parser.parse(new StringReader("@comment{jabref-meta: groupsversion:3;}" + OS.NEWLINE
-                + "@comment{jabref-meta: groupstree:" + OS.NEWLINE + "0 AllEntriesGroup:;" + OS.NEWLINE
-                + "1 KeywordGroup:Fréchet\\;0\\;keywords\\;FrechetSpace\\;0\\;1\\;;" + OS.NEWLINE
-                + "1 KeywordGroup:Invariant theory\\;0\\;keywords\\;GIT\\;0\\;0\\;;" + OS.NEWLINE
-                + "1 ExplicitGroup:TestGroup\\;0\\;Key1\\;Key2\\;;" + "}"));
+        ParserResult result = parser.parse(new StringReader("""
+                @comment{jabref-meta: groupsversion:3;}
+                @comment{jabref-meta: groupstree:
+                0 AllEntriesGroup:;
+                1 KeywordGroup:Fréchet\\;0\\;keywords\\;FrechetSpace\\;0\\;1\\;;
+                1 KeywordGroup:Invariant theory\\;0\\;keywords\\;GIT\\;0\\;0\\;;
+                1 ExplicitGroup:TestGroup\\;0\\;Key1\\;Key2\\;;}"""));
 
         GroupTreeNode root = result.getMetaData().getGroups().get();
 
@@ -1386,6 +1531,34 @@ class BibtexParserTest {
                 root.getChildren().get(1).getGroup());
         assertEquals(Arrays.asList("Key1", "Key2"),
                 ((ExplicitGroup) root.getChildren().get(2).getGroup()).getLegacyEntryKeys());
+    }
+
+    /**
+     * Checks that a TexGroup finally gets the required data, after parsing the library.
+     */
+    @Test
+    void integrationTestTexGroup() throws Exception {
+        ParserResult result = parser.parse(new StringReader(
+             "@comment{jabref-meta: grouping:" + OS.NEWLINE
+                     + "0 AllEntriesGroup:;" + OS.NEWLINE
+                     + "1 TexGroup:cited entries\\;0\\;paper.aux\\;1\\;0x8a8a8aff\\;\\;\\;;"
+                     + "}" + OS.NEWLINE
+           + "@Comment{jabref-meta: databaseType:biblatex;}" + OS.NEWLINE
+           + "@Comment{jabref-meta: fileDirectory:src/test/resources/org/jabref/model/groups;}" + OS.NEWLINE
+           + "@Comment{jabref-meta: fileDirectory-"
+                     + System.getProperty("user.name") + "-"
+                     + InetAddress.getLocalHost().getHostName()
+                     + ":src/test/resources/org/jabref/model/groups;}" + OS.NEWLINE
+           + "@Comment{jabref-meta: fileDirectoryLatex-"
+                     + System.getProperty("user.name") + "-"
+                     + InetAddress.getLocalHost().getHostName()
+                     + ":src/test/resources/org/jabref/model/groups;}" + OS.NEWLINE
+        ));
+
+        GroupTreeNode root = result.getMetaData().getGroups().get();
+
+        assertEquals(((TexGroup) root.getChildren().get(0).getGroup()).getFilePath(),
+                Path.of("src/test/resources/org/jabref/model/groups/paper.aux"));
     }
 
     @Test
@@ -1412,32 +1585,34 @@ class BibtexParserTest {
 
     @Test
     void parseReallyUnknownType() throws Exception {
-        String bibtexEntry = "@ReallyUnknownType{test," + OS.NEWLINE +
-                " Comment                  = {testentry}" + OS.NEWLINE +
-                "}";
+        String bibtexEntry = """
+                @ReallyUnknownType{test,
+                 Comment                  = {testentry}
+                }""";
 
         Collection<BibEntry> entries = parser.parseEntries(bibtexEntry);
         BibEntry expectedEntry = new BibEntry();
         expectedEntry.setType(new UnknownEntryType("Reallyunknowntype"));
-        expectedEntry.setCiteKey("test");
+        expectedEntry.setCitationKey("test");
         expectedEntry.setField(StandardField.COMMENT, "testentry");
 
-        assertEquals(Collections.singletonList(expectedEntry), entries);
+        assertEquals(List.of(expectedEntry), entries);
     }
 
     @Test
     void parseOtherTypeTest() throws Exception {
-        String bibtexEntry = "@Other{test," + OS.NEWLINE +
-                " Comment                  = {testentry}" + OS.NEWLINE +
-                "}";
+        String bibtexEntry = """
+                @Other{test,
+                 Comment                  = {testentry}
+                }""";
 
         Collection<BibEntry> entries = parser.parseEntries(bibtexEntry);
         BibEntry expectedEntry = new BibEntry();
         expectedEntry.setType(new UnknownEntryType("Other"));
-        expectedEntry.setCiteKey("test");
+        expectedEntry.setCitationKey("test");
         expectedEntry.setField(StandardField.COMMENT, "testentry");
 
-        assertEquals(Collections.singletonList(expectedEntry), entries);
+        assertEquals(List.of(expectedEntry), entries);
     }
 
     @Test
@@ -1485,36 +1660,38 @@ class BibtexParserTest {
         List<BibEntry> expected = new ArrayList<>();
         BibEntry first = new BibEntry();
         first.setType(StandardEntryType.Article);
-        first.setCiteKey("a");
+        first.setCitationKey("a");
         expected.add(first);
 
         BibEntry second = new BibEntry();
         second.setType(StandardEntryType.Article);
-        second.setCiteKey("b");
+        second.setCitationKey("b");
         expected.add(second);
 
         BibEntry third = new BibEntry();
         third.setType(StandardEntryType.InProceedings);
-        third.setCiteKey("c");
+        third.setCitationKey("c");
         expected.add(third);
 
         ParserResult result = parser
-                .parse(new StringReader("@article{a}" + OS.NEWLINE + "@article{b}" + OS.NEWLINE + "@inProceedings{c}"));
+                .parse(new StringReader("""
+                        @article{a}
+                        @article{b}
+                        @inProceedings{c}"""));
 
         assertEquals(expected, result.getDatabase().getEntries());
     }
 
     @Test
     void parsePrecedingComment() throws IOException {
-        // @formatter:off
-        String bibtexEntry = "% Some random comment that should stay here" + OS.NEWLINE +
-                "@Article{test," + OS.NEWLINE +
-                "  Author                   = {Foo Bar}," + OS.NEWLINE +
-                "  Journal                  = {International Journal of Something}," + OS.NEWLINE +
-                "  Note                     = {some note}," + OS.NEWLINE +
-                "  Number                   = {1}" + OS.NEWLINE +
-                "}";
-        // @formatter:on
+        String bibtexEntry = """
+                % Some random comment that should stay here
+                @Article{test,
+                  Author                   = {Foo Bar},
+                  Journal                  = {International Journal of Something},
+                  Note                     = {some note},
+                  Number                   = {1}
+                }""";
 
         // read in bibtex string
         ParserResult result = parser.parse(new StringReader(bibtexEntry));
@@ -1522,7 +1699,7 @@ class BibtexParserTest {
         BibEntry entry = entries.iterator().next();
 
         assertEquals(1, entries.size());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(5, entry.getFields().size());
         assertTrue(entry.getFields().contains(StandardField.AUTHOR));
         assertEquals(Optional.of("Foo Bar"), entry.getField(StandardField.AUTHOR));
@@ -1531,14 +1708,13 @@ class BibtexParserTest {
 
     @Test
     void parseCommentAndEntryInOneLine() throws IOException {
-        // @formatter:off
-        String bibtexEntry = "Some random comment that should stay here @Article{test," + OS.NEWLINE +
-                "  Author                   = {Foo Bar}," + OS.NEWLINE +
-                "  Journal                  = {International Journal of Something}," + OS.NEWLINE +
-                "  Note                     = {some note}," + OS.NEWLINE +
-                "  Number                   = {1}" + OS.NEWLINE +
-                "}";
-        // @formatter:on
+        String bibtexEntry = """
+                Some random comment that should stay here @Article{test,
+                  Author                   = {Foo Bar},
+                  Journal                  = {International Journal of Something},
+                  Note                     = {some note},
+                  Number                   = {1}
+                }""";
 
         // read in bibtex string
         ParserResult result = parser.parse(new StringReader(bibtexEntry));
@@ -1546,7 +1722,7 @@ class BibtexParserTest {
         BibEntry entry = entries.iterator().next();
 
         assertEquals(1, entries.size());
-        assertEquals(Optional.of("test"), entry.getCiteKeyOptional());
+        assertEquals(Optional.of("test"), entry.getCitationKey());
         assertEquals(5, entry.getFields().size());
         assertTrue(entry.getFields().contains(StandardField.AUTHOR));
         assertEquals(Optional.of("Foo Bar"), entry.getField(StandardField.AUTHOR));
@@ -1557,13 +1733,13 @@ class BibtexParserTest {
     void preserveEncodingPrefixInsideEntry() throws ParseException {
         BibEntry expected = new BibEntry();
         expected.setType(StandardEntryType.Article);
-        expected.setCiteKey("test");
-        expected.setField(StandardField.AUTHOR, SavePreferences.ENCODING_PREFIX);
+        expected.setCitationKey("test");
+        expected.setField(StandardField.AUTHOR, SaveConfiguration.ENCODING_PREFIX);
 
         List<BibEntry> parsed = parser
-                .parseEntries("@article{test,author={" + SavePreferences.ENCODING_PREFIX + "}}");
+                .parseEntries("@article{test,author={" + SaveConfiguration.ENCODING_PREFIX + "}}");
 
-        assertEquals(Collections.singletonList(expected), parsed);
+        assertEquals(List.of(expected), parsed);
     }
 
     @Test
@@ -1577,15 +1753,14 @@ class BibtexParserTest {
 
     @Test
     void parseRegularCommentBeforeEntry() throws IOException {
-        // @formatter:off
-        String bibtexEntry = "@Comment{someComment} " + OS.NEWLINE +
-                "@Article{test," + OS.NEWLINE +
-                "  Author                   = {Foo Bar}," + OS.NEWLINE +
-                "  Journal                  = {International Journal of Something}," + OS.NEWLINE +
-                "  Note                     = {some note}," + OS.NEWLINE +
-                "  Number                   = {1}" + OS.NEWLINE +
-                "}";
-        // @formatter:on
+        String bibtexEntry = """
+                @Comment{someComment}
+                @Article{test,
+                  Author                   = {Foo Bar},
+                  Journal                  = {International Journal of Something},
+                  Note                     = {some note},
+                  Number                   = {1}
+                }""";
 
         ParserResult result = parser.parse(new StringReader(bibtexEntry));
         Collection<BibEntry> entries = result.getDatabase().getEntries();
@@ -1605,15 +1780,14 @@ class BibtexParserTest {
 
     @Test
     void parseCommentWithoutBracketsBeforeEntry() throws IOException {
-        // @formatter:off
-        String bibtexEntry = "@Comment someComment  " + OS.NEWLINE +
-                "@Article{test," + OS.NEWLINE +
-                "  Author                   = {Foo Bar}," + OS.NEWLINE +
-                "  Journal                  = {International Journal of Something}," + OS.NEWLINE +
-                "  Note                     = {some note}," + OS.NEWLINE +
-                "  Number                   = {1}" + OS.NEWLINE +
-                "}";
-        // @formatter:on
+        String bibtexEntry = """
+                @Comment someComment
+                @Article{test,
+                  Author                   = {Foo Bar},
+                  Journal                  = {International Journal of Something},
+                  Note                     = {some note},
+                  Number                   = {1}
+                }""";
 
         ParserResult result = parser.parse(new StringReader(bibtexEntry));
         Collection<BibEntry> entries = result.getDatabase().getEntries();
@@ -1624,17 +1798,16 @@ class BibtexParserTest {
 
     @Test
     void parseCommentContainingEntries() throws IOException {
-        // @formatter:off
-        String bibtexEntry = "@Comment{@article{myarticle,}" + OS.NEWLINE +
-                "@inproceedings{blabla, title={the proceedings of blabla}; }" + OS.NEWLINE +
-                "} " + OS.NEWLINE +
-                "@Article{test," + OS.NEWLINE +
-                "  Author                   = {Foo Bar}," + OS.NEWLINE +
-                "  Journal                  = {International Journal of Something}," + OS.NEWLINE +
-                "  Note                     = {some note}," + OS.NEWLINE +
-                "  Number                   = {1}" + OS.NEWLINE +
-                "}";
-        // @formatter:on
+        String bibtexEntry = """
+                @Comment{@article{myarticle,}
+                @inproceedings{blabla, title={the proceedings of blabla}; }
+                }
+                @Article{test,
+                  Author                   = {Foo Bar},
+                  Journal                  = {International Journal of Something},
+                  Note                     = {some note},
+                  Number                   = {1}
+                }""";
 
         ParserResult result = parser.parse(new StringReader(bibtexEntry));
         Collection<BibEntry> entries = result.getDatabase().getEntries();
@@ -1645,17 +1818,16 @@ class BibtexParserTest {
 
     @Test
     void parseCommentContainingEntriesAndAtSymbols() throws IOException {
-        // @formatter:off
-        String bibtexEntry = "@Comment{@article{myarticle,}" + OS.NEWLINE +
-                "@inproceedings{blabla, title={the proceedings of bl@bl@}; }" + OS.NEWLINE +
-                "} " + OS.NEWLINE +
-                "@Article{test," + OS.NEWLINE +
-                "  Author                   = {Foo@Bar}," + OS.NEWLINE +
-                "  Journal                  = {International Journal of Something}," + OS.NEWLINE +
-                "  Note                     = {some note}," + OS.NEWLINE +
-                "  Number                   = {1}" + OS.NEWLINE +
-                "}";
-        // @formatter:on
+        String bibtexEntry = """
+                @Comment{@article{myarticle,}
+                @inproceedings{blabla, title={the proceedings of bl@bl@}; }
+                }
+                @Article{test,
+                  Author                   = {Foo@Bar},
+                  Journal                  = {International Journal of Something},
+                  Note                     = {some note},
+                  Number                   = {1}
+                }""";
 
         ParserResult result = parser.parse(new StringReader(bibtexEntry));
         Collection<BibEntry> entries = result.getDatabase().getEntries();
@@ -1711,7 +1883,7 @@ class BibtexParserTest {
                         "@Misc{m1, author = kopp # et # kubovy }");
 
         BibEntry expectedEntry = new BibEntry(StandardEntryType.Misc)
-                .withCiteKey("m1")
+                .withCitationKey("m1")
                 .withField(StandardField.AUTHOR, "#kopp##et##kubovy#");
 
         assertEquals(List.of(expectedEntry), parsed);
@@ -1727,7 +1899,7 @@ class BibtexParserTest {
                         "@Misc{m2, author = kopp # \" and \" # kubovy }");
 
         BibEntry expectedEntry = new BibEntry(StandardEntryType.Misc)
-                .withCiteKey("m2")
+                .withCitationKey("m2")
                 .withField(StandardField.AUTHOR, "#kopp# and #kubovy#");
 
         assertEquals(List.of(expectedEntry), parsed);
@@ -1778,5 +1950,40 @@ class BibtexParserTest {
         Optional<BibEntry> result = parser.parseSingleEntry("@Misc{m, month = apr }");
 
         assertEquals(Optional.of("#apr#"), result.get().getField(StandardField.MONTH));
+    }
+
+    @Test
+    void parseDuplicateKeywordsWithOnlyOneEntry() throws ParseException {
+        Optional<BibEntry> result = parser.parseSingleEntry("@Article{,\n"
+            + "Keywords={asdf,asdf,asdf},\n"
+            + "}\n"
+            + "");
+
+        BibEntry expectedEntry = new BibEntry(StandardEntryType.Article)
+            .withField(StandardField.KEYWORDS, "asdf,asdf,asdf");
+
+        assertEquals(Optional.of(expectedEntry), result);
+    }
+
+    @Test
+    void parseDuplicateKeywordsWithTwoEntries() throws Exception {
+        BibEntry expectedEntryFirst = new BibEntry(StandardEntryType.Article)
+            .withField(StandardField.KEYWORDS, "bbb")
+            .withCitationKey("Test2017");
+
+        BibEntry expectedEntrySecond = new BibEntry(StandardEntryType.Article)
+            .withField(StandardField.KEYWORDS, "asdf,asdf,asdf");
+
+        String entries = """
+            @Article{Test2017,
+              keywords = {bbb},
+            }
+
+            @Article{,
+              keywords = {asdf,asdf,asdf},
+            },
+            """;
+        ParserResult result = parser.parse(new StringReader(entries));
+        assertEquals(List.of(expectedEntryFirst, expectedEntrySecond), result.getDatabase().getEntries());
     }
 }
